:bug: z-index fixing

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -84,7 +84,7 @@
 
     &::before,
     &::after {
-      @apply absolute border-solid border-transparent w-0 h-0 z-[2010];
+      @apply absolute border-solid border-transparent w-0 h-0 z-max;
       @apply box-border pointer-events-none;
       content: '';
     }
@@ -129,7 +129,7 @@
 
     &::before,
     &::after {
-      @apply w-full h-full z-[2010];
+      @apply w-full h-full z-max;
     }
 
     &::before {
@@ -225,7 +225,7 @@
   .link-button {
     @apply inline-block bg-black text-yellow rounded-full text-center mix-blend-normal pt-2 pb-1 px-6;
     @apply transition-all duration-300 ease-in-out origin-center;
-    @apply hover:bg-purple hover:text-white hover:scale-105;
+    @apply hover:bg-peach hover:text-black hover:scale-105;
   }
 
   .project-block {
@@ -243,8 +243,8 @@
     left: var(--left);
 
     &:not(.block--selected):not(.block--moving) {
-      @apply scale-90;
-      @apply hover:scale-100;
+      @apply scale-50 lg:scale-90;
+      @apply hover:lg:scale-100 hover:!z-9990;
 
       &:before, &:after {
         @apply absolute pointer-events-none;
